# clawguard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SKILL.md
data/: koi_flagged.txt  snyk_flagged.txt  vt_flagged.txt
examples/: clawguard-install-hook.sh  config.toml  skill-dangerous.json  skill-malicious.json  skill-safe.json
pipelines/: guardrail-gate.lobster
src/: action.rs  encoding.rs  enforcement.rs  lib.rs  main.rs  migration.rs  onnx_support.rs  patterns.rs  proving.rs  receipt.rs  rules.rs  server.rs  skill.rs
src/models/: action_gatekeeper.rs  mod.rs  pii_shield.rs  scope_guard.rs  skill_safety.rs
tests/: cli.rs  integration.rs
