[package]
name = "clawguard"
version = "0.1.0"
edition = "2021"
description = "Gate OpenClaw agent actions through ONNX guardrail models with zero-knowledge proof verification."
license = "MIT"

[lib]
name = "clawguard"
path = "src/lib.rs"

[[bin]]
name = "clawguard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
eyre = "0.6"
dirs = "6.0"
regex = "1.10"
base64 = "0.22"

# jolt-atlas dependencies for proof generation
zkml-jolt-core = { path = "../zkml-jolt-core" }
onnx-tracer = { path = "../onnx-tracer" }
ark-bn254 = "0.5.0"
ark-serialize = { workspace = true }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "dev", package = "jolt-core", default-features = true }
